Bug 70038 - gabble: fix tubes tests
Summary: gabble: fix tubes tests
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: gabble (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-02 14:06 UTC by Guillaume Desmottes
Modified: 2013-10-03 07:59 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
wocky: update to master (658 bytes, patch)
2013-10-02 14:07 UTC, Guillaume Desmottes
Details | Splinter Review
private-tubes-factory: use self->priv pattern (16.89 KB, patch)
2013-10-02 14:07 UTC, Guillaume Desmottes
Details | Splinter Review
conn-presence: fix enum cast warning (1.33 KB, patch)
2013-10-02 14:07 UTC, Guillaume Desmottes
Details | Splinter Review
private-tube-factory: tube ID is a guint64 (776 bytes, patch)
2013-10-02 14:07 UTC, Guillaume Desmottes
Details | Splinter Review

Description Guillaume Desmottes 2013-10-02 14:06:17 UTC
Tubes tests were failing on my laptop so I finally decided to debug it.
Comment 1 Guillaume Desmottes 2013-10-02 14:07:13 UTC
Created attachment 86967 [details] [review]
wocky: update to master
Comment 2 Guillaume Desmottes 2013-10-02 14:07:28 UTC
Created attachment 86968 [details] [review]
private-tubes-factory: use self->priv pattern
Comment 3 Guillaume Desmottes 2013-10-02 14:07:38 UTC
Created attachment 86969 [details] [review]
conn-presence: fix enum cast warning
Comment 4 Guillaume Desmottes 2013-10-02 14:07:50 UTC
Created attachment 86970 [details] [review]
private-tube-factory: tube ID is a guint64
Comment 5 Simon McVittie 2013-10-02 14:45:07 UTC
Comment on attachment 86967 [details] [review]
wocky: update to master

Review of attachment 86967 [details] [review]:
-----------------------------------------------------------------

++ for master only
Comment 6 Simon McVittie 2013-10-02 14:46:46 UTC
Comment on attachment 86968 [details] [review]
private-tubes-factory: use self->priv pattern

Review of attachment 86968 [details] [review]:
-----------------------------------------------------------------

++ for master only
Comment 7 Simon McVittie 2013-10-02 14:47:37 UTC
Comment on attachment 86969 [details] [review]
conn-presence: fix enum cast warning

Review of attachment 86969 [details] [review]:
-----------------------------------------------------------------

++ for master, or for stable if you think it matters enough
Comment 8 Simon McVittie 2013-10-02 14:49:23 UTC
Comment on attachment 86970 [details] [review]
private-tube-factory: tube ID is a guint64

Review of attachment 86970 [details] [review]:
-----------------------------------------------------------------

++ for stable, please merge to master from there.

(Any idea why this is a uint64 bounded by [0, G_MAXUINT32]? Seems a bit mad.)
Comment 9 Guillaume Desmottes 2013-10-03 07:59:04 UTC
Merged first patches to master and the the 2 others to 0.18.

(In reply to comment #8)
> Comment on attachment 86970 [details] [review] [review]
> private-tube-factory: tube ID is a guint64
> 
> Review of attachment 86970 [details] [review] [review]:
> -----------------------------------------------------------------
> 
> ++ for stable, please merge to master from there.
> 
> (Any idea why this is a uint64 bounded by [0, G_MAXUINT32]? Seems a bit mad.)

A typo I guess. I wouldn't mind changing to a guint32 in master if you want.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.