private-tubes-factory: use self->priv pattern

I'm about to track a bug in this file and the mix of old and new priv patterns
is irritating.

https://bugs.freedesktop.org/show_bug.cgi?id=70038